 * Adding a docker image for testing on archlinux. Use:
   > docker-compose build archlinux
   > docker-compose run archlinux
 * Adding a docker image for testing on Debian 'sid'. Use:
   > docker-compose build debian-sid
   > docker-compose run debian-sid
 * Making H2Min/MaxWorkers behave as intended again. The module will initially
   create H2MinWorkers threads and add up to H2MaxWorkers when needed. These
   additional workers time out when idle after H2MaxWorkerIdleSeconds and
   disappear again.
 * When the shutdown of a child is detected (e.g. graceful shutdown), the
   module will terminate all idle workers above H2MinWorkers right away.
   This detection currently only happens when a HTTP/2 connection is active.
 * Restoring compatibility with apache httpd 2.4.48 again.
 * when ongoing sessions detect that the process shuts down (for example due to a
   graceful restart), they now cause idle h2 workers to terminate early.
   This hopefully addresses #212.

v1.15.20
--------------------------------------------------------------------------------
 * requires apache httpd 2.4.48
 * Align handling of 304 response headers with behaviour of http/1.1. [ylavic]
 * now shares code with http/1.1 protocol implementation
   for checking validity of methods and other request parameter. [ylavic]
 * Using the new ap_ssl_* functions available since Apache 2.4.48
 * Some compatibility fixes with the ever evolving OpenSSL API

v1.15.19
--------------------------------------------------------------------------------
 * Fixed the Makefile to include the test module in the distribution, so that
   tests can be build an run from the tar file. Fixes #210.

v1.15.18
--------------------------------------------------------------------------------
 * Fixed a race condition that could lead to streams being aborted
   (RST to the client), although a response had been produced.

v1.15.17
--------------------------------------------------------------------------------